--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,6 +1,6 @@
 name: azuredatastudio
-summary: Azure Data Studio is a data management tool that enables working with SQL Server, Azure SQL DB and SQL DW from Windows, macOS and Linux. 
-description: 
+summary: Azure Data Studio is a data management tool.
+description: Enables working with SQL Server, Azure SQL DB and SQL DW from Windows, macOS and Linux. 
   
 adopt-info: devmode # use 'strict' once you have the right plugs and slots
 
@@ -14,9 +14,11 @@ architectures:
 
 apps:
   azuredatastudio:
-    command: azuredatastudio
+    command: bin/azuredatastudio
     plugs:
+      - home
       - network
+      - removable-media
 
 parts:
   azuredatastudio:
@@ -24,10 +26,11 @@ parts:
     source: https://github.com/Microsoft/azuredatastudio.git
     source-type: git
     override-pull: |
-      snapcraftctl pull
+       git clone https://github.com/Microsoft/azuredatastudio.git src/github.com/Microsoft/azuredatastudio
+       cd src/github.com/Microsoft/azuredatastudio
       last_committed_tag="$(git describe --tags --abbrev=0)"
       last_committed_tag_ver="$(echo ${last_committed_tag} | sed 's/v//')"
-      last_released_tag="$(snap info wethr | awk '$1 == "beta:" { print $2 }')"
+      last_released_tag="$(snap info $SNAPCRAFT_PROJECT_NAME | awk '$1 == "beta:" { print $2 }')"
       # If the latest tag from the upstream project has not been released to
       # beta, build that tag instead of master.
       if [ "${last_committed_tag_ver}" != "${last_released_tag}" ]; then
@@ -35,6 +38,16 @@ parts:
         git checkout "${last_committed_tag}"
       fi
       snapcraftctl set-version "$(git describe --tags | sed 's/v//')"
+      override-build: |
+      export GOPATH=$PWD
+      cd src/github.com/Microsoft/azuredatastudio
+      env CGO_ENABLED=0 GOOS=linux \
+      go build --ldflags "-s -w \
+        -X 'github.com/Microsoft/azuredatastudio/version.GitCommit=$(git rev-list -1 HEAD)' \
+        -X 'github.com/Microsoft/azuredatastudio/version.Version=$(git describe --tags --abbrev=0)'" \
+        -a -installsuffix cgo -o $SNAPCRAFT_PART_INSTALL/bin/azuredatastudio
+    build-snaps:
+      - 
     build-packages:
       - git
       - sed
