--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,53 +1,101 @@
 name: azuredatastudio
-summary: Azure Data Studio is a data management tool.
-description: Enables working with SQL Server, Azure SQL DB and SQL DW from Windows, macOS and Linux. 
+version: latest
+version-script: cat $SNAPCRAFT_STAGE/version
+summary:
+description: |
   
-adopt-info: devmode # use 'strict' once you have the right plugs and slots
 
 grade: stable
-confinement: devmode
+confinement: classic
 
 architectures:
   - build-on: amd64
-  - build-on: armhf
-  - build-on: arm64
+
+parts:
+  gnome:
+    plugin: nil
+    build-packages:
+      - software-properties-common
+    override-pull: |
+      add-apt-repository -y ppa:ubuntu-desktop/gnome-3-26
+      apt -y update
+      apt -y upgrade
+
+  azuredatastudio:
+    after:
+      - gnome
+    plugin: dump
+    source:
+      # Azure Data Studio is only available for i386 (x86) and amd64 (x86_64),
+      # so fail the build on other architectures.
+      - on amd64: https://go.microsoft.com/fwlink/?linkid=2087415
+      
+    source-type: deb
+    override-build: |
+      ARCHITECTURE=$(dpkg --print-architecture)
+      if [ "${ARCHITECTURE}" = "amd64" ]; then
+        DEB_API="https://go.microsoft.com/fwlink/?linkid=2087415"
+      else
+        echo "ERROR! Azure Data Studio only produces debs for amd64. Failing the build here."
+        exit 1
+      fi
+
+      DEB_URL=$(curl -w "%{url_effective}\n" -I -L -s -S "${DEB_API}" -o /dev/null)
+      VERSION=$(echo "${DEB_URL}" | cut -d'_' -f2)
+      echo $VERSION > $SNAPCRAFT_STAGE/version
+
+      # Correct path to icon.
+      sed -i 's|Icon=com\.azuredatastudio\.code|Icon=/usr/share/pixmaps/com\.azuredatastudio\.code\.png|g' usr/share/applications/code.desktop
+      sed -i 's|Icon=com\.azuredatastudio\.code|Icon=/usr/share/pixmaps/com\.azuredatastudio\.code\.png|g' usr/share/applications/code-url-handler.desktop
+      snapcraftctl build
+    build-packages:
+      - curl
+      - dpkg
+      - sed
+    stage-packages:
+      - fcitx-frontend-gtk3
+      - gvfs-libs
+      - libasound2
+      - libgconf-2-4
+      - libglib2.0-bin
+      - libgnome-keyring0
+      - libgtk-3-0
+      - libnotify4
+      - libnspr4
+      - libnss3
+      - libpcre3
+      - libpulse0
+      - libsecret-1-0
+      - libxss1
+      - libxtst6
+      - yad
+      - zlib1g
+    prime:
+      - -usr/share/doc
+      - -usr/share/fonts
+      - -usr/share/icons
+      - -usr/share/lintian
+      - -usr/share/man
+
+  wrapper:
+    after:
+      - azuredatastudio
+    plugin: dump
+    source: files/
 
 apps:
   azuredatastudio:
-    command: bin/azuredatastudio
-    plugs:
-      - home
-      - network
-      - removable-media
+    command: bin/wrapper $SNAP/usr/share/code/bin/code
+    desktop: usr/share/applications/code.desktop
+    environment:
+      # Fallback to XWayland if running in a Wayland session.
+      DISABLE_WAYLAND: 1
+      GSETTINGS_SCHEMA_DIR: $SNAP/usr/share/glib-2.0/schemas
 
-parts:
-  azuredatastudio:
-    plugin: 
-    source: https://github.com/Microsoft/azuredatastudio.git
-    source-type: git
-    override-pull: |
-       git clone https://github.com/Microsoft/azuredatastudio.git src/github.com/Microsoft/azuredatastudio
-       cd src/github.com/Microsoft/azuredatastudio
-      last_committed_tag="$(git describe --tags --abbrev=0)"
-      last_committed_tag_ver="$(echo ${last_committed_tag} | sed 's/v//')"
-      last_released_tag="$(snap info $SNAPCRAFT_PROJECT_NAME | awk '$1 == "beta:" { print $2 }')"
-      # If the latest tag from the upstream project has not been released to
-      # beta, build that tag instead of master.
-      if [ "${last_committed_tag_ver}" != "${last_released_tag}" ]; then
-        git fetch
-        git checkout "${last_committed_tag}"
-      fi
-      snapcraftctl set-version "$(git describe --tags | sed 's/v//')"
-      override-build: |
-      export GOPATH=$PWD
-      cd src/github.com/Microsoft/azuredatastudio
-      env CGO_ENABLED=0 GOOS=linux \
-      go build --ldflags "-s -w \
-        -X 'github.com/Microsoft/azuredatastudio/version.GitCommit=$(git rev-list -1 HEAD)' \
-        -X 'github.com/Microsoft/azuredatastudio/version.Version=$(git describe --tags --abbrev=0)'" \
-        -a -installsuffix cgo -o $SNAPCRAFT_PART_INSTALL/bin/azuredatastudio
-    build-snaps:
-      - 
-    build-packages:
-      - git
-      - sed
+  url-handler:
+    command: bin/wrapper $SNAP/usr/share/code/bin/code --open-url
+    desktop: usr/share/applications/code-url-handler.desktop
+    environment:
+      # Fallback to XWayland if running in a Wayland session.
+      DISABLE_WAYLAND: 1
+      GSETTINGS_SCHEMA_DIR: $SNAP/usr/share/glib-2.0/schemas
