--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,9 +1,9 @@
 name: azuredatastudio
 version: latest
 version-script: cat $SNAPCRAFT_STAGE/version
-summary:
-description: |
-  
+summary: Data management tool.
+description:| Azure Data Studio is a data management tool that works with SQL Server, Azure SQL DB and SQL DW.
+icon: snap/gui/icon.png
 
 grade: stable
 confinement: classic
@@ -17,7 +17,7 @@ parts:
     build-packages:
       - software-properties-common
     override-pull: |
-      add-apt-repository -y ppa:ubuntu-desktop/gnome-3-26
+      add-apt-repository -y ppa:ubuntu-desktop/gnome-3-28
       apt -y update
       apt -y upgrade
 
@@ -26,7 +26,7 @@ parts:
       - gnome
     plugin: dump
     source:
-      # Azure Data Studio is only available for i386 (x86) and amd64 (x86_64),
+      # Azure Data Studio is only available for amd64 (x86_64),
       # so fail the build on other architectures.
       - on amd64: https://go.microsoft.com/fwlink/?linkid=2087415
       
@@ -43,10 +43,7 @@ parts:
       DEB_URL=$(curl -w "%{url_effective}\n" -I -L -s -S "${DEB_API}" -o /dev/null)
       VERSION=$(echo "${DEB_URL}" | cut -d'_' -f2)
       echo $VERSION > $SNAPCRAFT_STAGE/version
-
-      # Correct path to icon.
-      sed -i 's|Icon=com\.azuredatastudio\.code|Icon=/usr/share/pixmaps/com\.azuredatastudio\.code\.png|g' usr/share/applications/code.desktop
-      sed -i 's|Icon=com\.azuredatastudio\.code|Icon=/usr/share/pixmaps/com\.azuredatastudio\.code\.png|g' usr/share/applications/code-url-handler.desktop
+      
       snapcraftctl build
     build-packages:
       - curl
@@ -85,16 +82,16 @@ parts:
 
 apps:
   azuredatastudio:
-    command: bin/wrapper $SNAP/usr/share/code/bin/code
-    desktop: usr/share/applications/code.desktop
+    command: bin/wrapper $SNAP/usr/share/azuredatastudio/bin/azuredatastudio
+    desktop: usr/share/applications/azuredatastudio.desktop
     environment:
       # Fallback to XWayland if running in a Wayland session.
       DISABLE_WAYLAND: 1
       GSETTINGS_SCHEMA_DIR: $SNAP/usr/share/glib-2.0/schemas
 
   url-handler:
-    command: bin/wrapper $SNAP/usr/share/code/bin/code --open-url
-    desktop: usr/share/applications/code-url-handler.desktop
+    command: bin/wrapper $SNAP/usr/share/azuredatastudio/bin/azuredatastudio --open-url
+    desktop: usr/share/applications/azuredatastudio-url-handler.desktop
     environment:
       # Fallback to XWayland if running in a Wayland session.
       DISABLE_WAYLAND: 1
